--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Preprocesamiento de los datos\n",
+    "\n",
+    "A continuación se realizarán las funciones que permitiran usar el conjunto de datos 'Salary_data', con el que se pretende predecir cuál será el salario de una persona, dependiendo de su nivel académico, años de experiencia, cargo al que aspira."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +23,7 @@
     "    def creation_data(self, path_csv):\n",
     "        df = pd.read_csv(path_csv)\n",
     "        return df\n",
-    "    \n",
     "    def declaration_var(self, data, target):\n",
-    "        \n",
     "        target_1 = data[target]\n",
     "        features = data.drop(target, axis=1)\n",
     "        names_f = {name:set() for name in features}\n",
@@ -24,41 +31,29 @@
     "            index_drop = features[i][features[i].isnull() == True].index\n",
     "            features.drop(index_drop, inplace = True)    \n",
     "            target_1.drop(index_drop, inplace = True)\n",
-    "        \n",
     "        for i in features:\n",
     "            for j in features[i]:\n",
     "                names_f[i].add(j)   \n",
-    "                    \n",
     "        index_targ = target_1[target_1.isnull() == True].index\n",
     "        target_1.drop(index_targ, inplace=True)   \n",
     "        features.drop(index_targ, inplace=True)                    \n",
     "        return target_1, features, names_f\n",
-    "    \n",
-    "    def one_hot(self, variable, features):\n",
-    "        # for category in variable:\n",
-    "        #     if category not in features.columns:\n",
-    "        #         features[category] = 0  # Agrega la categoría con valores 0 si no está presente\n",
-    "        encoder = OneHotEncoder()\n",
-    "        feature_encoded = encoder.fit_transform(features[variable])\n",
-    "        df_one_hot = pd.DataFrame(feature_encoded.toarray(), columns=encoder.get_feature_names_out(variable))\n",
-    "        features.drop(variable, axis=1, inplace=True)\n",
-    "        names_one = [name for name in df_one_hot]\n",
-    "        df_one_hot[names_one] = df_one_hot[names_one].astype('int8')\n",
-    "        features.reset_index(drop=True, inplace=True)\n",
-    "        df_one_hot.reset_index(drop=True, inplace=True)\n",
-    "        features = pd.concat([features, df_one_hot], axis=1)\n",
-    "        return features \n",
-    "\n",
     "    def replace(self, variable, var_1, var_2, features):\n",
     "        new_values = [var_1 if value == var_1 or value == var_2 else value for value in features[variable]]\n",
     "        features[variable] = new_values\n",
-    "        return features\n",
-    "\n"
+    "        return features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importación de las librerías que se usarán"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,10 +61,77 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.linear_model import LinearRegression, Ridge\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.metrics import r2_score, mean_squared_error\n",
     "\n",
+    "processing = pre()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definición del conjunto de datos del que se hará uso y la variable objetivo, junto a las demás variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
     "\n",
-    "processing = pre()\n",
+    "x = r'C:\\Users\\santi\\OneDrive - Universidad Pedagogica Nacional\\El_bosque\\tercer_semestre\\machine_learning_ll\\proyecto\\Salary_Data.csv'\n",
+    "data = pre().creation_data(x)\n",
+    "target, features, names_f = pre().declaration_var(data, 'Salary')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego de definir el target y features, se determina que las variables \"Age\",\"Years of Experience\" pueden tener un diferente tipo de formato, con el que se consuma menos recursos computacionales.\n",
+    "\n",
+    "También, se encontró que en la variable Education Level, poseía errores tipográficos, donde los diferentes elementos que lo conforman estaban nombrados de diferente forma, apesar de representar el mismo objeto.\n",
+    "\n",
+    "Por ejemplo, Bachelor's Degree representa una persona con un título de bachiller y Bachelor's es la forma en la que se puede resumir a una persona con el mismo título. Por lo tanto, ambos elementos comparten las mismas características y deben tomarse como objeto único.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Cambiar el tipo de formato\n",
+    "features['Age'] = features['Age'].astype('int16')\n",
+    "features['Years of Experience'] = features['Years of Experience'].astype('int64')\n",
+    "\n",
+    "# Unir las variables repetidas\n",
+    "features = pre().replace('Education Level', \"Bachelor's\", \"Bachelor's Degree\", features)\n",
+    "features = pre().replace('Education Level', \"Master's\", \"Master's Degree\", features)\n",
+    "features = pre().replace('Education Level', \"PhD\", \"phD\", features)\n",
+    "\n",
+    "num_features = ['Age', 'Years of Experience']\n",
+    "cat_features = ['Gender', 'Education Level', 'Job Title']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se define los pipelines para las variables categóricas y numéricas, además se transforma en el tipo de dato correcto para que se pueda entrenar con los diferentes modelos de regresión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def pipe(categorical_features, features):\n",
     "    num_transformer = Pipeline(steps=[('scaler', StandardScaler())])\n",
@@ -85,81 +147,193 @@
     "    )\n",
     "    return preprocessor\n",
     "\n",
-    "def gen_pipe( preprocessor):\n",
-    "    pipeline = Pipeline(\n",
-    "        steps = [('preprocessor_column', preprocessor),\n",
-    "                ('linear_model', LinearRegression())]\n",
-    "    )\n",
-    "    return pipeline"
+    "num_transformer, cat_transformer = pipe(cat_features, features)\n",
+    "preprocessor = column_trans(num_transformer, num_features, cat_transformer, cat_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con esta función se crean diferentes modelos de regresión como Lineal, RandomForest, Ridge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_pipe( preprocessor):\n",
+    "    models = []    \n",
+    "    pipeline_ml = Pipeline(\n",
+    "        steps = [('preprocessor_column', preprocessor),\n",
+    "                ('linear_model', LinearRegression())])\n",
+    "    models.append(pipeline_ml)\n",
+    "        \n",
+    "    pipeline_ridge = Pipeline(\n",
+    "        steps = [('preprocessor_column', preprocessor),\n",
+    "                ('model_ridge', Ridge(alpha=0.2))])\n",
+    "    models.append(pipeline_ridge)\n",
+    "    \n",
+    "    pipeline_rf = Pipeline(\n",
+    "        steps=[('preprocessor_column', preprocessor),\n",
+    "            ('random_forest', RandomForestRegressor(n_estimators=200))])\n",
+    "    models.append(pipeline_rf)\n",
+    "    \n",
+    "    return models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "División de los datos de entrenamiento y de prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split \n",
+    "X_train, X_test,y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline(steps=[('preprocessor_column',\n",
-      "                 ColumnTransformer(transformers=[('numerical',\n",
-      "                                                  Pipeline(steps=[('scaler',\n",
-      "                                                                   StandardScaler())]),\n",
-      "                                                  ['Age',\n",
-      "                                                   'Years of Experience']),\n",
-      "                                                 ('categorical',\n",
-      "                                                  Pipeline(steps=[('one_hot',\n",
-      "                                                                   OneHotEncoder(handle_unknown='ignore'))]),\n",
-      "                                                  ['Gender', 'Education Level',\n",
-      "                                                   'Job Title'])])),\n",
-      "                ('linear_model', LinearRegression())])\n",
-      "r2 0.8401837858582851\n",
-      "mse 455709421.883616\n",
-      "115329.25306061511\n",
-      "rmse 21347.351636294745\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pipeline import pipe, column_trans, gen_pipe\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "import numpy as np \n",
+    "models = gen_pipe(preprocessor)\n",
+    "len(models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: [0.84, 455709421.88, 21347.35],\n",
+       " 1: [0.84, 455648120.24, 21345.92],\n",
+       " 2: [0.97, 71990608.94, 8484.73]}"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models_metrics = {i:[] for i in range(len(models)) }\n",
     "\n",
-    "data = pre().creation_data('Salary_Data.csv')\n",
-    "target, features, names_f = pre().declaration_var(data, 'Salary')\n",
+    "for i in models_metrics:\n",
+    "    model = models[i].fit(X_train, y_train)\n",
+    "    prediction = model.predict(X_test)\n",
+    "    r2 = r2_score(y_test, prediction)\n",
+    "    mse = mean_squared_error(y_test, prediction)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, prediction))\n",
+    "    list_1 = [r2,mse,rmse]\n",
+    "    models_metrics[i] = [round(metrics, 2) for metrics in list_1]\n",
+    "models_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LinearRegression</th>\n",
+       "      <th>Ridge</th>\n",
+       "      <th>RandomForestRegressor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>R2</th>\n",
+       "      <td>8.400000e-01</td>\n",
+       "      <td>8.400000e-01</td>\n",
+       "      <td>0.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mse</th>\n",
+       "      <td>4.557094e+08</td>\n",
+       "      <td>4.556481e+08</td>\n",
+       "      <td>71990608.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rmse</th>\n",
+       "      <td>2.134735e+04</td>\n",
+       "      <td>2.134592e+04</td>\n",
+       "      <td>8484.73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      LinearRegression         Ridge  RandomForestRegressor\n",
+       "R2        8.400000e-01  8.400000e-01                   0.97\n",
+       "mse       4.557094e+08  4.556481e+08            71990608.94\n",
+       "rmse      2.134735e+04  2.134592e+04                8484.73"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names = ['LinearRegression', 'Ridge', 'RandomForestRegressor']\n",
+    "index_final = ['R2', 'mse', 'rmse']\n",
     "\n",
-    "#Cambiar el tipo de formato\n",
-    "features['Age'] = features['Age'].astype('int16')\n",
-    "features['Years of Experience'] = features['Years of Experience'].astype('int64')\n",
-    "\n",
-    "# Unir las variables repetidas\n",
-    "features = pre().replace('Education Level', \"Bachelor's\", \"Bachelor's Degree\", features)\n",
-    "features = pre().replace('Education Level', \"Master's\", \"Master's Degree\", features)\n",
-    "features = pre().replace('Education Level', \"PhD\", \"phD\", features)\n",
-    "\n",
-    "num_features = ['Age', 'Years of Experience']\n",
-    "cat_features = ['Gender', 'Education Level', 'Job Title']\n",
-    "\n",
-    "#Convertir las variables catégoricas en OneHotEncoder\n",
-    "num_transformer, cat_transformer = pipe(cat_features, features)\n",
-    "preprocessor = column_trans(num_transformer, num_features, cat_transformer, cat_features)\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split \n",
-    "X_train, X_test,y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n",
-    "\n",
-    "linear_model = gen_pipe(preprocessor)\n",
-    "\n",
-    "reg_l = linear_model.fit(X_train, y_train)\n",
-    "\n",
-    "print(reg_l)\n",
-    "\n",
-    "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "prediction_linear = linear_model.predict(X_test)\n",
-    "print('r2',r2_score(y_test, prediction_linear))\n",
-    "print('mse', mean_squared_error(y_test, prediction_linear))\n",
-    "print(np.mean(target))\n",
-    "print('rmse', np.sqrt(mean_squared_error(y_test, prediction_linear)))"
+    "models_metrics = pd.DataFrame(data = models_metrics,index = index_final)\n",
+    "models_metrics.columns = names\n",
+    "models_metrics"
    ]
   }
  ],
