--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,53 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split \n",
-    "X_train, X_test,y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n"
+    "X_train, X_test,y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n",
+    "models = gen_pipe(preprocessor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "models = gen_pipe(preprocessor)\n",
-    "len(models)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: [0.84, 455709421.88, 21347.35],\n",
-       " 1: [0.84, 455648120.24, 21345.92],\n",
-       " 2: [0.97, 71990608.94, 8484.73]}"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models_metrics = {i:[] for i in range(len(models)) }\n",
     "\n",
@@ -257,13 +224,12 @@
     "    mse = mean_squared_error(y_test, prediction)\n",
     "    rmse = np.sqrt(mean_squared_error(y_test, prediction))\n",
     "    list_1 = [r2,mse,rmse]\n",
-    "    models_metrics[i] = [round(metrics, 2) for metrics in list_1]\n",
-    "models_metrics"
+    "    models_metrics[i] = [round(metrics, 2) for metrics in list_1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -303,13 +269,13 @@
        "      <th>mse</th>\n",
        "      <td>4.557094e+08</td>\n",
        "      <td>4.556481e+08</td>\n",
-       "      <td>71990608.94</td>\n",
+       "      <td>71345821.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rmse</th>\n",
        "      <td>2.134735e+04</td>\n",
        "      <td>2.134592e+04</td>\n",
-       "      <td>8484.73</td>\n",
+       "      <td>8446.65</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -318,11 +284,11 @@
       "text/plain": [
        "      LinearRegression         Ridge  RandomForestRegressor\n",
        "R2        8.400000e-01  8.400000e-01                   0.97\n",
-       "mse       4.557094e+08  4.556481e+08            71990608.94\n",
-       "rmse      2.134735e+04  2.134592e+04                8484.73"
+       "mse       4.557094e+08  4.556481e+08            71345821.34\n",
+       "rmse      2.134735e+04  2.134592e+04                8446.65"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
