--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,6 @@
     "        steps = [('preprocessor_column', preprocessor),\n",
     "                ('model_ridge', Ridge(alpha=0.2))])\n",
     "    models.append(pipeline_ridge)\n",
-    "    \n",
     "    pipeline_rf = Pipeline(\n",
     "        steps=[('preprocessor_column', preprocessor),\n",
     "            ('random_forest', RandomForestRegressor(n_estimators=200))])\n",
@@ -200,36 +199,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split \n",
+    "from sklearn.utils import resample\n",
+    "\n",
     "X_train, X_test,y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n",
     "models = gen_pipe(preprocessor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "models_metrics = {i:[] for i in range(len(models)) }\n",
     "\n",
+    "\n",
+    "\n",
     "for i in models_metrics:\n",
+    "    n_bootstraps = 1000\n",
     "    model = models[i].fit(X_train, y_train)\n",
     "    prediction = model.predict(X_test)\n",
+    "    bootstraps_predict = []\n",
+    "    \n",
+    "    for _ in range(n_bootstraps):\n",
+    "        muestras_bootstrap = resample(prediction)\n",
+    "        statics_bootstrap = np.mean(muestras_bootstrap)\n",
+    "        bootstraps_predict.append(statics_bootstrap)\n",
+    "\n",
+    "    int_conf = np.percentile(bootstraps_predict, [5, 95])\n",
+    "    \n",
+    "    for j in range(len(int_conf)):\n",
+    "        int_conf[j] = round(int_conf[j], 2)\n",
+    "    \n",
     "    r2 = r2_score(y_test, prediction)\n",
     "    mse = mean_squared_error(y_test, prediction)\n",
     "    rmse = np.sqrt(mean_squared_error(y_test, prediction))\n",
-    "    list_1 = [r2,mse,rmse]\n",
-    "    models_metrics[i] = [round(metrics, 2) for metrics in list_1]\n"
+    "    list_1 = [r2,mse,rmse, int_conf]\n",
+    "    models_metrics[i] = [metrics for metrics in list_1]\n",
+    "    \n",
+    "    \n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -261,45 +280,72 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>R2</th>\n",
-       "      <td>8.400000e-01</td>\n",
-       "      <td>8.400000e-01</td>\n",
-       "      <td>0.97</td>\n",
+       "      <td>0.840184</td>\n",
+       "      <td>0.840205</td>\n",
+       "      <td>0.974792</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mse</th>\n",
-       "      <td>4.557094e+08</td>\n",
-       "      <td>4.556481e+08</td>\n",
-       "      <td>71345821.34</td>\n",
+       "      <td>455709421.883616</td>\n",
+       "      <td>455648120.237456</td>\n",
+       "      <td>71880515.531615</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rmse</th>\n",
-       "      <td>2.134735e+04</td>\n",
-       "      <td>2.134592e+04</td>\n",
-       "      <td>8446.65</td>\n",
+       "      <td>21347.351636</td>\n",
+       "      <td>21345.915774</td>\n",
+       "      <td>8478.237761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>intervalo de confianza</th>\n",
+       "      <td>[112686.2, 117158.74]</td>\n",
+       "      <td>[112764.67, 117218.91]</td>\n",
+       "      <td>[112577.93, 117341.32]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      LinearRegression         Ridge  RandomForestRegressor\n",
-       "R2        8.400000e-01  8.400000e-01                   0.97\n",
-       "mse       4.557094e+08  4.556481e+08            71345821.34\n",
-       "rmse      2.134735e+04  2.134592e+04                8446.65"
+       "                             LinearRegression                   Ridge  \\\n",
+       "R2                                   0.840184                0.840205   \n",
+       "mse                          455709421.883616        455648120.237456   \n",
+       "rmse                             21347.351636            21345.915774   \n",
+       "intervalo de confianza  [112686.2, 117158.74]  [112764.67, 117218.91]   \n",
+       "\n",
+       "                         RandomForestRegressor  \n",
+       "R2                                    0.974792  \n",
+       "mse                            71880515.531615  \n",
+       "rmse                               8478.237761  \n",
+       "intervalo de confianza  [112577.93, 117341.32]  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "names = ['LinearRegression', 'Ridge', 'RandomForestRegressor']\n",
-    "index_final = ['R2', 'mse', 'rmse']\n",
+    "index_final = ['R2', 'mse', 'rmse', 'intervalo de confianza']\n",
+    "\n",
+    "#Agregar más métricas de desempeño f1, recall, intervalos de confianza, cross_validation, \n",
+    "#Agregar matrices de confusión, flasos positivos y demás\n",
+    "\n",
     "\n",
     "models_metrics = pd.DataFrame(data = models_metrics,index = index_final)\n",
     "models_metrics.columns = names\n",
     "models_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.utils import resample \n",
+    "\n"
    ]
   }
  ],
