Interpretacion resultados iniciales

--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -982,6 +982,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpretación \n",
+    "\n",
+    "\n",
+    "### Regresión Lineal y Ridge:\n",
+    "\n",
+    "* Ambos modelos (Regresión Lineal y Ridge) tienen un rendimiento bastante similar con valores de R^2 alrededor de 455, y MSE y RMSE similares.\n",
+    "* El mejor parámetro de ajuste y los valores de R^2 son altos, indicando que el modelo explica bien la variabilidad en los datos.\n",
+    "\n",
+    "\n",
+    "### Random Forest \n",
+    "\n",
+    "* El modelo de Bosques Aleatorios tiene un rendimiento superior en términos de R^2, mostrando una capacidad significativamente mejor para explicar la variabilidad en los datos.\n",
+    "* El MSE y RMSE son más bajos en comparación con los modelos lineales, indicando que el modelo de Bosques Aleatorios tiene una mejor capacidad predictiva.\n",
+    "\n",
+    "El modelo random forest el más efectivo entre los tres, al menos según las métricas proporcionadas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
