--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -2166,6 +2166,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Interpretación\n",
+    "\n",
+    "* Mejor parámetro de ajuste: {'ridge__alpha': 0.3039195382313198}\n",
+    "\n",
+    "Este valor representa el mejor valor encontrado para el hiperparámetro alpha del modelo Ridge durante la búsqueda aleatoria. El alpha controla la fuerza de regularización en Ridge, y un valor más bajo indica menos regularización.\n",
+    "\n",
+    "* Mejor R^2 obtenido: \n",
+    "\n",
+    "0.8336976388148226\n",
+    "El coeficiente de determinación (R^2) es una medida de qué tan bien el modelo se ajusta a los datos. Un valor de 1 indica un ajuste perfecto, y 0 indica que el modelo no explica la variabilidad en los datos. En este caso, un R^2 de 0.83 sugiere que el modelo Ridge explica el 83% de la variabilidad en los datos de entrenamiento.\n",
+    "Score en el conjunto de prueba:\n",
+    "\n",
+    "0.8401856080511727\n",
+    "Esta es la puntuación R^2 en el conjunto de prueba. Indica qué tan bien el modelo generaliza a datos no vistos. Un R^2 cercano a 1 en el conjunto de prueba sugiere que el modelo generaliza bien.\n",
+    "Interpretación general:\n",
+    "El mejor valor de alpha encontrado sugiere que un nivel moderado de regularización (ni demasiado fuerte ni demasiado débil) es óptimo para el modelo Ridge en este caso.\n",
+    "\n",
+    "El R^2 obtenido en el conjunto de entrenamiento es bastante alto (0.83), lo que indica un buen ajuste del modelo a los datos de entrenamiento.\n",
+    "\n",
+    "La puntuación R^2 en el conjunto de prueba (0.84) sugiere que el modelo Ridge generaliza bien a datos no vistos, lo cual es positivo.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Ajuste de hiperparametros"
    ]
   },
