--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -2260,13 +2260,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Conclusiones"
+    "## Interpretación \n",
+    "\n",
+    "* Mejor R^2 obtenido:\n",
+    "\n",
+    "0.9746690877213477\n",
+    "Un R^2 de 0.97 indica un ajuste extremadamente fuerte del modelo a los datos de prueba. El 97% de la variabilidad en la variable objetivo (salario, en este caso) se explica por el modelo. Es un resultado muy positivo.\n",
+    "\n",
+    "* MSE (Error Cuadrático Medio):\n",
+    "\n",
+    "72230064.09132643\n",
+    "El MSE es la media de los cuadrados de los errores entre las predicciones y los valores reales. \n",
+    "\n",
+    "* RMSE (Raíz del Error Cuadrático Medio):\n",
+    "\n",
+    "8498.827218582952\n",
+    "El RMSE es la raíz cuadrada del MSE y proporciona una medida de la magnitud promedio de los errores en la misma unidad que la variable objetivo. Un RMSE bajo indica que el modelo tiene un buen ajuste y las predicciones son precisas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 6. Conclusiones"
+   ]
   }
  ],
  "metadata": {
