--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -2284,6 +2284,19 @@
    "source": [
     "## 6. Conclusiones"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se inició el proceso  con modelos de regresión lineal simple, Ridge con un alpha fijo, y un modelo de random forest con hiperparámetros arbitrarios.\n",
+    "\n",
+    "En la medida que se ajustaton los hiperparametros los modelos mostraron mejora en las metricas \n",
+    "\n",
+    "* El modelo Ridge mejoró su rendimiento después de RandomizedSearchCV, mostrando un R^2 más alto y un mejor score en el conjunto de prueba.\n",
+    "\n",
+    "* El modelo de Bosques Aleatorios, después de la GridSearchCV, alcanzó un rendimiento excepcional con un R^2 de 0.97 y un bajo RMSE en el conjunto de prueba."
+   ]
   }
  ],
  "metadata": {
