--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -968,14 +968,14 @@
     "\n",
     "### Regresión Lineal y Ridge:\n",
     "\n",
-    "* Ambos modelos (Regresión Lineal y Ridge) tienen un rendimiento bastante similar con valores de R^2 alrededor de 455, y MSE y RMSE similares.\n",
+    "* Ambos modelos (Regresión Lineal y Ridge) tienen un rendimiento bastante similar con valores de R^2, y MSE y RMSE similares.\n",
     "* El mejor parámetro de ajuste y los valores de R^2 son altos, indicando que el modelo explica bien la variabilidad en los datos.\n",
     "\n",
     "\n",
     "### Random Forest \n",
     "\n",
     "* El modelo de Bosques Aleatorios tiene un rendimiento superior en términos de R^2, mostrando una capacidad significativamente mejor para explicar la variabilidad en los datos.\n",
-    "* El MSE y RMSE son más bajos en comparación con los modelos lineales, indicando que el modelo de Bosques Aleatorios tiene una mejor capacidad predictiva.\n",
+    "* El MSE y RMSE son más bajos en comparación con los modelos lineales, indicando que el modelo random tiene una mejor capacidad predictiva.\n",
     "\n",
     "El modelo random forest el más efectivo entre los tres, al menos según las métricas proporcionadas."
    ]
@@ -2164,11 +2164,11 @@
     "\n",
     "* Mejor R^2 obtenido: \n",
     "\n",
-    "0.8336976388148226\n",
+    "0.83\n",
     "El coeficiente de determinación (R^2) es una medida de qué tan bien el modelo se ajusta a los datos. Un valor de 1 indica un ajuste perfecto, y 0 indica que el modelo no explica la variabilidad en los datos. En este caso, un R^2 de 0.83 sugiere que el modelo Ridge explica el 83% de la variabilidad en los datos de entrenamiento.\n",
     "Score en el conjunto de prueba:\n",
     "\n",
-    "0.8401856080511727\n",
+    "0.84\n",
     "Esta es la puntuación R^2 en el conjunto de prueba. Indica qué tan bien el modelo generaliza a datos no vistos. Un R^2 cercano a 1 en el conjunto de prueba sugiere que el modelo generaliza bien.\n",
     "Interpretación general:\n",
     "El mejor valor de alpha encontrado sugiere que un nivel moderado de regularización (ni demasiado fuerte ni demasiado débil) es óptimo para el modelo Ridge en este caso.\n",
@@ -2413,18 +2413,17 @@
     "\n",
     "* Mejor R^2 obtenido:\n",
     "\n",
-    "0.9746690877213477\n",
-    "Un R^2 de 0.97 indica un ajuste extremadamente fuerte del modelo a los datos de prueba. El 97% de la variabilidad en la variable objetivo (salario, en este caso) se explica por el modelo. Es un resultado muy positivo.\n",
+    "Un R^2 de aproximadamente 0.975 indica un ajuste excepcionalmente fuerte del modelo a los datos de prueba. El 97.5% de la variabilidad en la variable objetivo (salario) se explica por el modelo. Es un resultado extremadamente positivo y sugiere una capacidad sobresaliente del modelo para explicar la variabilidad en los datos.\n",
     "\n",
     "* MSE (Error Cuadrático Medio):\n",
     "\n",
-    "72230064.09132643\n",
+    "71596470.0\n",
     "El MSE es la media de los cuadrados de los errores entre las predicciones y los valores reales. \n",
     "\n",
     "* RMSE (Raíz del Error Cuadrático Medio):\n",
     "\n",
-    "8498.827218582952\n",
-    "El RMSE es la raíz cuadrada del MSE y proporciona una medida de la magnitud promedio de los errores en la misma unidad que la variable objetivo. Un RMSE bajo indica que el modelo tiene un buen ajuste y las predicciones son precisas."
+    "8461.47\n",
+    "El RMSE es la raíz cuadrada del MSE y proporciona una medida de la magnitud promedio de los errores en la misma unidad que la variable objetivo. Un RMSE relativamente bajo (8,461.47) indica que el modelo tiene un buen ajuste y las predicciones son precisas en el contexto del salario."
    ]
   },
   {
